--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -13,3 +13,44 @@
  *= require_tree .
  *= require_self
  */
+
+html, body {
+  height: 100vh;
+}
+
+.main-layout-table {
+  width: 100%;
+  height: 100vh;
+}
+
+.index-layout-column {
+  width: 10%;
+  min-width: 200px;
+  background-color: #F5F5F5;
+  vertical-align: top;
+  padding-top: 25px;
+}
+
+.title {
+  padding: 25px;
+  margin-top: 25px;
+  font-weight: bold;
+  font-size: 125%;
+}
+
+.sketch-list {
+  list-style-type: none;
+  padding: 15px;
+  margin: 0px;
+}
+
+.sketch-list-item {
+  padding: 10px;
+  border-bottom: solid;
+  border-width: 1px;
+  border-color: lightgrey;
+}
+
+.sketch-list-item-active {
+  background-color: lightgrey;
+}
