--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -8,19 +8,13 @@
     <%= csrf_meta_tags %>
   </head>
   <body>
-
-    <div class="pure-menu pure-menu-horizontal">
-      <a href="#" class="pure-menu-heading">BrainStorm</a>
-      
-      <ul class="pure-menu-list">
-        <li class="pure-menu-item pure-menu-selected" id="loadButton"><a href="#" class="pure-menu-link">Load</a></li>
-        <li class="pure-menu-item"><a href="#" id="saveAsButton" class="pure-menu-link">Save</a></li>
-        <li class="pure-menu-item"><a href="#" id="clearButton" class="pure-menu-link">Clear</a></li>
-        <li class="pure-menu-item"><a href="#" id="aboutButton" class="pure-menu-link">Instructions</a></li>
-      </ul>
+    <div class="main-body">
+      <table class="main-layout-table">
+        <tr>
+          <%= yield %>
+        </tr>
+      </table>
     </div>
-
-    <%= yield %>
 
   </body>
 </html>
