Add javascript for making nodes
We split up the javascript file into separate files. Lots of work to do to split up long functions!!

--- a/app/views/sketches/show.html.erb
+++ b/app/views/sketches/show.html.erb
@@ -37,8 +37,9 @@
     </ul>
   </div>
 
-  <canvas id="canvas1" width="800" height="600">
-    This text is displayed if your browser does not support HTML5 Canvas.
-  </canvas>
-
+  <div onLoad='init()'>
+    <canvas id="canvas1" width="800" height="600">
+      This text is displayed if your browser does not support HTML5 Canvas.
+    </canvas>
+  </div>
 </td>
