--- a/app/views/sketches/show.html.erb
+++ b/app/views/sketches/show.html.erb
@@ -1,3 +1,4 @@
+
 <!-- <p id="notice"><%= notice %></p> -->
 
 <td class="index-layout-column">
@@ -37,6 +38,14 @@
       </li>
       <li class="pure-menu-item"><a href="#" id="clearButton" class="pure-menu-link">Clear</a></li>
       <li class="pure-menu-item"><a href="#" id="aboutButton" class="pure-menu-link">Instructions</a></li>
+      <li class="pure-menu-item">
+        <% if current_user %>
+          <%= current_user.name %>
+          <%= link_to 'Logout', '../signout' %>
+        <% else %>
+          <%= link_to 'Login with Facebook', '../auth/facebook' %>
+        <% end %>
+      </li>
     </ul>
   </div>
 
