--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -96,7 +96,7 @@
     <div class="modal-body">
 
       A light weight application for creating mind maps for
-      brain storming, built with JavaScript, HTML5 Canvas,
+      brain storming, built with Rails, JavaScript, HTML5 Canvas,
       Twitter Bootstrap and Pure. Extended from cool example by <a href =
       "http://simonsarris.com/blog/510-making-html5-canvas-useful"
       target="_blank">
